# shadowx-settle

./: .gitignore  Anchor.toml  BUILD_INSTRUCTIONS.md  Cargo.toml  DEPLOY-CHECKLIST.md  DEPLOY.sh  QUICKSTART.md  README.md  START-TRADING-APP.sh  build.sh  calc-discriminator.js  fix-build.sh  package-lock.json  package.json  tsconfig.json  wallet.json
app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/hooks/: usePoolState.ts  usePoolStats.ts
app/src/types/: program.ts
app/src/utils/: program.ts
apps/trading-ui/: README.md  index.html  package.json  vite.config.ts
apps/trading-ui/src/: App.tsx  index.css
apps/trading-ui/src/components/: Dashboard.tsx  Header.tsx  MyIntents.tsx  PoolInfo.tsx  SubmitIntent.tsx
apps/trading-ui/src/utils/: constants.ts  helpers.ts
apps/web/public/: index.html
keys/: admin.json  arcium-verifier.json  relayer-authority.json
migrations/: deploy.ts
programs/shadowx-program/: Cargo.toml
programs/shadowx-program/src/: arcium_verify.rs  constants.rs  errors.rs  events.rs  lib.rs
programs/shadowx-program/src/instructions/: intent.rs  market.rs  mod.rs  pool.rs  settlement.rs
programs/shadowx-program/src/state/: accounts.rs  mod.rs  settlement.rs
scripts/: initialize-pool.js  initialize-pool.ts
tests/: shadowx.ts
