[package]
name = "shadowx-program"
version = "1.0.0"
description = "ShadowX Settle - Intent based privacy execution on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowx_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-idl"]  # DISABLE IDL by default to avoid anchor-syn compilation
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"], default-features = false }
anchor-spl  = { version = "=0.30.1", features = ["token"], default-features = false }
solana-program = "=1.18.26"
